--- a/_posts/2024-03-27-阿里云CTF2024.md
+++ b/_posts/2024-03-27-阿里云CTF2024.md
@@ -480,26 +480,26 @@ public class PocServer {
 
 ctx全局变量+条件竞争
 这道题自己实现了golang的路由，做了一个仿gin框架的东西。但是有一个地方设计的有问题。
-![img](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711356251773-c83c3eef-9184-4cb4-a86a-7eca98b4db4f.png#averageHue=%23212226&clientId=ufe14a54f-09e6-4&from=paste&id=uda1560a9&originHeight=1280&originWidth=2252&originalType=url&ratio=2&rotation=0&showTitle=false&status=done&style=none&taskId=u26e95c11-ce4a-4238-87ce-dd3e9fb8065&title=)
+![image-20240401133606632](\img\image-20240401133606632.png)
 每一个路由都是由Handle方法去处理的
-![img](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711356251718-a5d5ea0f-8745-4f38-b820-ec03c1f60f21.png#averageHue=%23202226&clientId=ufe14a54f-09e6-4&from=paste&id=ue44e8b29&originHeight=482&originWidth=1650&originalType=url&ratio=2&rotation=0&showTitle=false&status=done&style=none&taskId=u0222687e-4446-4886-98b7-2d7dcea6285&title=)
+![image-20240401133624561](\img\image-20240401133624561.png)
 启用了多个Http，但是需要注意这里
-![img](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711356251771-742cac08-afde-4de9-a656-cfcb1718660d.png#averageHue=%23515047&clientId=ufe14a54f-09e6-4&from=paste&id=uf83be1ba&originHeight=142&originWidth=736&originalType=url&ratio=2&rotation=0&showTitle=false&status=done&style=none&taskId=ua1d79aa2-0272-4e41-91db-eeca10ee61a&title=)
-![img](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711356251828-b8fadbe7-e17f-466e-8540-8ee5ab68207a.png#averageHue=%23222427&clientId=ufe14a54f-09e6-4&from=paste&id=u0ace053b&originHeight=442&originWidth=1632&originalType=url&ratio=2&rotation=0&showTitle=false&status=done&style=none&taskId=u4069d659-ac19-4bcc-a873-fc5d93b3a81&title=)
-![img](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711356251694-6385ad47-ef63-47da-bc05-c97d708394a6.png#averageHue=%23496670&clientId=ufe14a54f-09e6-4&from=paste&id=u78d101fc&originHeight=442&originWidth=1612&originalType=url&ratio=2&rotation=0&showTitle=false&status=done&style=none&taskId=ubf197832-b37c-4dd7-a1a9-184f0de5ef9&title=)
+![image-20240401133647934](\img\image-20240401133647934.png)
+![image-20240401133705249](\img\image-20240401133705249.png)
+![image-20240401133722404](\img\image-20240401133722404.png)
 这三个流程告诉我们的信息就是context上下文所有路由都公用。
 再看看路由
-![img](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711356252429-5165407a-ec94-448e-a1b1-0634bc848a74.png#averageHue=%23202327&clientId=ufe14a54f-09e6-4&from=paste&id=u2fce5e08&originHeight=1314&originWidth=1374&originalType=url&ratio=2&rotation=0&showTitle=false&status=done&style=none&taskId=uafb774cf-710b-4eda-ad03-2dcd00d4bee&title=)
+![image-20240401133744740](\img\image-20240401133744740.png)
 既然是自己实现的框架，那就看一下它的中间件功能是如何实现的吧
-![img](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711356252447-43f15d3b-a5d0-4326-aab7-7fccd7ff0991.png#averageHue=%23202226&clientId=ufe14a54f-09e6-4&from=paste&id=u0dd86a95&originHeight=504&originWidth=1518&originalType=url&ratio=2&rotation=0&showTitle=false&status=done&style=none&taskId=u9554018a-2cff-42fb-aa3f-69dc3fcc472&title=)
+![image-20240401133758133](\img\image-20240401133758133.png)
 它的中间件是在run方法里去手动调用的，然后我们看看flag获取的逻辑吧
-![img](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711356252391-87efc741-b9d6-40f5-b83e-00f3e33617ae.png#averageHue=%23222327&clientId=ufe14a54f-09e6-4&from=paste&id=ud5ff4fbb&originHeight=430&originWidth=1180&originalType=url&ratio=2&rotation=0&showTitle=false&status=done&style=none&taskId=u3b3ead95-58de-4da0-a5cb-b8f5084a002&title=)
+![image-20240401133810747](\img\image-20240401133810747.png)
 访问就送，但是有个鉴权模块
-![img](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711356252823-47854e10-2284-4061-afe4-fbc4f39183e9.png#averageHue=%23202225&clientId=ufe14a54f-09e6-4&from=paste&id=u770f0c11&originHeight=836&originWidth=1518&originalType=url&ratio=2&rotation=0&showTitle=false&status=done&style=none&taskId=u079ee744-db30-4d9e-a6dc-a06aa129341&title=)
+![image-20240401133831603](\img\image-20240401133831603.png)
 结合上述的几个条件其实不难想到，我们要做的就只是绕过权限而已，并不需要伪造真正的admin，由于ctx是共享的，那么ctx的属性也会被影响
-设想一下：假如一个进程访问flag（需要onlyAdmin），一个路由访问普通用户路由（不需要onlyAdmin），那么在这里条件竞争一下，ctx.mws是不是就被污染了呢？那我们就绕过了onlyAdmin访问到了flagHandler。
+设想一下：假如一个进程访问flag（需要onlyAdmin），一个路由访问普通用户路由（不需要onlyAdmin)，那么在这里条件竞争一下，ctx.mws是不是就被污染了呢？那我们就绕过了onlyAdmin访问到了flagHandler。
 还有最后一个点
-![img](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711356252428-46d0406f-ed4e-4906-a057-7e715468cf16.png#averageHue=%23202225&clientId=ufe14a54f-09e6-4&from=paste&id=u33e59de2&originHeight=1084&originWidth=1638&originalType=url&ratio=2&rotation=0&showTitle=false&status=done&style=none&taskId=ud92a4bf9-b29e-4d73-bb1a-be6a5c726f2&title=)
+![image-20240401133907977](\img\image-20240401133907977.png)
 如果内容有flag那么会给你清空了，但是注意上面的if，我们只需要页面的output有admin字眼就行，我们create一个title为admin的内容就行了，然后一边访问flag一边访问/paste/view就行了。
 最终拿下flag
 
@@ -532,5 +532,5 @@ with requests.session() as session:
         threading.Thread(target=flag).start()
 ```
 
-![image.png](https://cdn.nlark.com/yuque/0/2024/png/32634994/1711358909908-a1783476-6a8b-4faf-8c85-38457f70af7c.png#averageHue=%23232428&clientId=ufe14a54f-09e6-4&from=paste&height=866&id=uc870ede5&originHeight=1732&originWidth=3264&originalType=binary&ratio=2&rotation=0&showTitle=false&size=438573&status=done&style=none&taskId=ub1960347-8eca-4edc-b823-fb361987af4&title=&width=1632)
+![image.png](\img\1711358909908-a1783476-6a8b-4faf-8c85-38457f70af7c.png)
 
